# cytoprocess

./: .gitignore  README.md  environment.txt  pyproject.toml  requirements.txt
.github/workflows/: release.yml
cytoprocess/: all.py  cli.py  config.py  convert.py  create.py  extract_features.py  extract_images.py  extract_list.py  extract_pulses.py  install.py  utils.py
cytoprocess/commands/: __init__.py  all.py  cleanup.py  compute_features.py  convert.py  create.py  extract_all.py  extract_cyto.py  extract_features.py  extract_images.py  extract_list.py  extract_meta.py  extract_pulses.py  install.py  list.py  prepare.py  summarise_pulses.py  upload.py
cytoprocess/templates/: config.yaml  metadata_config.yaml
