[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cytoprocess"
version = "0.0.1"
description = "Package to process images and their features from .cyz files and upload them to EcoTaxa"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "click>=8.0",
    "ijson>=3.0",
    "pandas>=1.3.0",
    "pyyaml>=5.4"
]

[project.scripts]
cytoprocess = "cytoprocess.cli:main"
